--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,26 @@
-<%- include('layout/header') %>
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="container">
-        <div class="row my-4">
-            <div class="col-lg-12">
-                <div class="table-responsive">
-                    <table class="table table-striped text-center">
-                        <thead>
-                            <tr class="table-dark">
-                                <th>ID</th>
-                                <th>Image</th>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Phone</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td><img src="" alt="" /></td>
-                                <td>Sahil Kumar</td>
-                                <td>sahil.kumar@gmail.com</td>
-                                <td>12129859632</td>
-                                <td>
-                                    <a href="" class="text-success">
-                                        <i class="fas fa-edit fa-lg mx-1"></i>
-                                    </a>
-                                    <a href="" class="text-danger">
-                                        <i class="fas fa-trash fa-lg mx-1"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-    <%- include('layout/footer') %>
+<head>
+    <meta charset="UTF-8">
+    <title>Users</title>
+</head>
+
+<body>
+    <h1>User List</h1>
+
+    <table border="1">
+        <tr>
+            <th>Name</th>
+        </tr>
+        <% users.forEach(user=> { %>
+            <tr>
+                <td>
+                    <%= user.name %>
+                </td>
+            </tr>
+            <% }) %>
+    </table>
+</body>
+
+</html>
