add datatable with pagination

--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,4 +1,22 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.datatables.net/v/dt/dt-2.3.4/datatables.min.js"
+    integrity="sha384-X2pTSfom8FUa+vGQ+DgTCSyBZYkC1RliOduHa0X96D060s7Q//fnOh3LcazRNHyo"
+    crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta2/js/bootstrap.bundle.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#usersTable').DataTable({
+            pageLength: 5, // default rows per page
+            lengthMenu: [5, 10, 20, 50], // options in dropdown
+            searching: true, // enable search
+            ordering: true   // enable sorting
+        });
+    });
+</script>
+
 </body>
 
 </html>
