--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
         <div class="row my-4">
             <div class="col-lg-12">
                 <div class="table-responsive">
-                    <table class="table table-striped text-center">
+                    <table id="usersTable" class="table table-striped text-center">
                         <thead>
                             <tr class="table-dark">
                                 <th>ID</th>
@@ -36,10 +36,10 @@
                                         <%= user.phone %>
                                     </td>
                                     <td>
-                                        <a href="" class="text-success">
+                                        <a href="/edit/<%= user.id %>" class="text-success">
                                             <i class="fas fa-edit fa-lg mx-1"></i>
                                         </a>
-                                        <a href="" class="text-danger">
+                                        <a href="/delete/<%= user.id %>" class="text-danger">
                                             <i class="fas fa-trash fa-lg mx-1"></i>
                                         </a>
                                     </td>
@@ -51,4 +51,5 @@
             </div>
         </div>
     </div>
+
     <%- include('layout/footer') %>
